# uk-lung-cancer-spatial

./: .gitignore  README.md  alignment_check.py  app.py  dashboard_data.geojson  pyproject.toml  requirements.txt
00_legacy/00_legacy/CAR_model/: run_model.py
00_legacy/00_legacy/GP_model/: gp_model.py  utils.py
enar_poster/: generate_audit_table.py  map_comparison.py  posterior_comparison.py
legacy/uk-lung-model/: 1376830934927918.csv  1380710199350457.csv  ukaggregatedlung.csv  ukaggregatedpop.csv
legacy/uk-lung-model/CAR_model/: mcmc_analysis.py  run_model_log.txt  save_inferencetable.py  uk-lung-car.ipynb  uk_lung_car.py
legacy/uk-lung-model/GP_model/: posterior_plot.ipynb  requirements.txt  run_gp_model.py
legacy/uk-lung-model/Local_Authority_Districts_December_2023_Boundaries_UK_BFC_9042356933902664268/: LAD_DEC_2023_UK_BFC.dbf  LAD_DEC_2023_UK_BFC.shp.xml  LAD_DEC_2023_UK_BFC.shx
scripts/: analyze_car_v3.py  car_generate_report.py  car_generate_report_v4.py  car_generate_report_v4_6.py  car_v3_viz.py  car_v3_viz_london.py  check_spatial.py  debug.py  extract_spatial_data.py  gp_generate_report.py  gp_generate_report_gen.py  gp_generate_report_v4.py  gp_v3_viz.py  prepare_dashboard_data.py
scripts/car_scripts/: car_generate_report_v4_5.py  car_generate_report_v4_gen.py
src/lung_cancer_spatial/inference/: run_car.py  run_car_v4.5.py  run_car_v4.py  run_car_v4_6.py  run_car_v4_7.py  run_car_v4_gen.py  run_gp.py  run_gp_gen.py  run_gp_v4.py
src/lung_cancer_spatial/models/: car.py  car_v4.py  car_v4_5.py  car_v4_6.py  car_v4_7.py  car_v4_8.py  gp.py  (+1 more)
(+8 files in other folders)
